--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - run: cargo build --verbose
+    - run: cargo test --verbose
+    - run: cargo build --release
+    - if: startsWith(github.ref, 'refs/tags/')
+      run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
