--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,9 +17,7 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - run: cargo build --verbose
@@ -27,5 +25,9 @@ jobs:
     - run: cargo build --release
     - if: startsWith(github.ref, 'refs/tags/')
       run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - if: startsWith(github.ref, 'refs/tags/')
+      run: gh release upload ${GITHUB_REF#refs/*/} target/release/tfexe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
