--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,20 +14,52 @@ permissions: write-all
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: "-D warnings"
 
 jobs:
-  build:
+  format:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: cargo build --verbose
-    - run: cargo test --verbose
-    - run: cargo build --release
+    - run: cargo fmt --all -- --check
+  lint:
+    runs-on: ubuntu-latest
+    needs: [format]
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
+  test:
+    runs-on: ubuntu-latest
+    needs: [format, lint]
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo test --verbose --all
+  build:
+    runs-on: ubuntu-latest
+    needs: [format, lint]
+    steps:
+    - uses: actions/checkout@v3
+    - if: !startsWith(github.ref, 'refs/tags/')
+      run: cargo build --verbose
     - if: startsWith(github.ref, 'refs/tags/')
-      run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
+      run: cargo build --release
+    - uses: actions/upload-artifact@v3
+      with:
+        name: bin
+        path: target/release/tfexe
+  release:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [format, lint, test, build]
+    steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: bin
+        path: tfexe
+    - run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - if: startsWith(github.ref, 'refs/tags/')
-      run: gh release upload ${GITHUB_REF#refs/*/} target/release/tfexe
+    - run: gh release upload ${GITHUB_REF#refs/*/} tfexe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
