--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,7 +39,7 @@ jobs:
     needs: [format, lint]
     steps:
     - uses: actions/checkout@v3
-    - if: !startsWith(github.ref, 'refs/tags/')
+    - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release
