--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,20 +23,26 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo fmt --all -- --check
   lint:
-    runs-on: ubuntu-latest
     needs: [format]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
   test:
-    runs-on: ubuntu-latest
     needs: [format, lint]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
     - run: cargo test --verbose --all
   build:
-    runs-on: ubuntu-latest
     needs: [format, lint]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
     - if: "!startsWith(github.ref, 'refs/tags/')"
@@ -48,9 +54,9 @@ jobs:
         name: bin
         path: target/release/tfexe
   release:
+    needs: [format, lint, test, build]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
-    needs: [format, lint, test, build]
     steps:
     - uses: actions/download-artifact@v3
       with:
