--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,34 +30,38 @@ jobs:
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
   test:
     needs: [format, lint]
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-${{ matrix.arch }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [amd, arm]
     steps:
     - uses: actions/checkout@v3
     - run: cargo test --verbose --all
   build:
     needs: [format, lint]
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-${{ matrix.arch }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [amd, arm]
     steps:
     - uses: actions/checkout@v3
     - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release
-    - uses: actions/upload-artifact@v3
+    - if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-artifact@v3
       with:
         name: bin
-        path: target/release/tfexe
+        path: target/release/tfexe_${{ matrix.os }}_${{ matrix.arch }}
   release:
     needs: [format, lint, test, build]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+    - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
         name: bin
