--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,21 +30,41 @@ jobs:
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
   test:
     needs: [format, lint]
-    runs-on: ${{ matrix.os }}-${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [amd, arm]
+        include:
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+          - target: x86_64-apple-darwin
+            os: macos-lastest
+          - target: aarch64-apple-darwin
+            os: macos-lastest
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-lastest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+            #rustup target add aarch64-apple-darwin
+            #cargo build --release --target=aarch64-apple-darwin
     steps:
     - uses: actions/checkout@v3
     - run: cargo test --verbose --all
   build:
     needs: [format, lint]
-    runs-on: ${{ matrix.os }}-${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [amd, arm]
+        include:
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+          - target: x86_64-apple-darwin
+            os: macos-lastest
+          - target: aarch64-apple-darwin
+            os: macos-lastest
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-lastest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - if: "!startsWith(github.ref, 'refs/tags/')"
@@ -55,7 +75,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: bin
-        path: target/release/tfexe_${{ matrix.os }}_${{ matrix.arch }}
+        path: target/release/tfexe_${{ matrix.target }}
   release:
     needs: [format, lint, test, build]
     runs-on: ubuntu-latest
