--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,10 +45,9 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
             #rustup target add aarch64-apple-darwin
-            #cargo build --release --target=aarch64-apple-darwin
     steps:
     - uses: actions/checkout@v3
-    - run: cargo test --verbose --all
+    - run: cargo test --verbose --all --target=${{ matrix.target }}
   build:
     needs: [format, lint]
     runs-on: ${{ matrix.os }}
@@ -68,28 +67,31 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - if: "!startsWith(github.ref, 'refs/tags/')"
-      run: cargo build --verbose
+      run: cargo build --verbose --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
-      run: cargo build --release
+      run: cargo build --release --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
-        name: bin
-        path: target/release/tfexe_${{ matrix.target }}
+        name: tfexe_${{ matrix.target }}
+        path: target/${{ matrix.target }}/release/tfexe
   release:
     needs: [format, lint, test, build]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64-pc-windows-gnu, x86_64-apple-darwin, aarch64-apple-darwin, x86_64-unknown-linux-musl, aarch64-unknown-linux-gnu]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        name: bin
-        path: tfexe
+        name: tfexe_${{ matrix.target }}
+        path: tfexe_${{ matrix.target }}
     - run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - run: gh release upload ${GITHUB_REF#refs/*/} tfexe
+    - run: gh release upload ${GITHUB_REF#refs/*/} tfexe_${{ matrix.target }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
