--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,9 +44,9 @@ jobs:
             os: ubuntu-lastest
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
-            #rustup target add aarch64-apple-darwin
     steps:
     - uses: actions/checkout@v3
+    - run: rustup target add ${{ matrix.target }}
     - run: cargo test --verbose --all --target=${{ matrix.target }}
   build:
     needs: [format, lint]
@@ -66,6 +66,7 @@ jobs:
             os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - run: rustup target add ${{ matrix.target }}
     - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
