--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,15 +35,15 @@ jobs:
       matrix:
         include:
           - target: x86_64-unknown-linux-musl
-            os: ubuntu-lastest
+            os: ubuntu-latest
               # - target: x86_64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
               # - target: x86_64-pc-windows-gnu
               #   os: windows-latest
               # - target: x86_64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
               # - target: aarch64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
               # - target: aarch64-unknown-linux-gnu
               #   os: ubuntu-latest
     steps:
@@ -57,15 +57,15 @@ jobs:
       matrix:
         include:
           - target: x86_64-unknown-linux-musl
-            os: ubuntu-lastest
+            os: ubuntu-latest
               # - target: x86_64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
               # - target: x86_64-pc-windows-gnu
               #   os: windows-latest
               # - target: x86_64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
               # - target: aarch64-apple-darwin
-              #   os: macos-lastest
+              #   os: macos-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
