--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,28 +28,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
-  test:
-    needs: [format, lint]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-              # - target: x86_64-apple-darwin
-              #   os: macos-latest
-              # - target: x86_64-pc-windows-gnu
-              #   os: windows-latest
-              # - target: x86_64-apple-darwin
-              #   os: macos-latest
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
-              # - target: aarch64-unknown-linux-gnu
-              #   os: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - run: rustup target add ${{ matrix.target }}
-    - run: cargo test --verbose --all --target=${{ matrix.target }}
   build:
     needs: [format, lint]
     runs-on: ${{ matrix.os }}
@@ -58,14 +36,14 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-              # - target: x86_64-apple-darwin
-              #   os: macos-latest
-              # - target: x86_64-pc-windows-gnu
-              #   os: windows-latest
-              # - target: x86_64-apple-darwin
-              #   os: macos-latest
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -78,6 +56,26 @@ jobs:
       with:
         name: tfexe_${{ matrix.target }}
         path: target/${{ matrix.target }}/release/tfexe
+  test:
+    needs: [format, lint, build]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: rustup target add ${{ matrix.target }}
+    - run: cargo test --verbose --all --target=${{ matrix.target }}
   release:
     needs: [format, lint, test, build]
     runs-on: ubuntu-latest
