--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,10 +40,10 @@ jobs:
             os: macos-latest
           - target: x86_64-pc-windows-gnu
             os: windows-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
               # - target: aarch64-apple-darwin
               #   os: macos-latest
-              # - target: aarch64-unknown-linux-gnu
-              #   os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -68,10 +68,10 @@ jobs:
             os: macos-latest
           - target: x86_64-pc-windows-gnu
             os: windows-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
               # - target: aarch64-apple-darwin
               #   os: macos-latest
-              # - target: aarch64-unknown-linux-gnu
-              #   os: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
