--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -84,6 +84,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
     - run: cargo test --verbose --all --target=${{ matrix.target }}
+      env: ${{ matrix.env }}
   release:
     needs: [format, lint, test, build]
     runs-on: ubuntu-latest
