--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
   build:
-    needs: [format, lint]
+    #needs: [format, lint]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -53,8 +53,10 @@ jobs:
     - run: rustup target add ${{ matrix.target }}
     - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose --target=${{ matrix.target }}
+      env: ${{ matrix.env }}
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
+      env: ${{ matrix.env }}
     - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
