--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,10 +42,10 @@ jobs:
             os: windows-latest
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-            env:
-              CC_aarch64_unknown_linux_musl: clang
-              AR_aarch64_unknown_linux_musl: llvm-ar
-              CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
+              #            env:
+              #              CC_aarch64_unknown_linux_musl: clang
+              #              AR_aarch64_unknown_linux_musl: llvm-ar
+              #              CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
               # - target: aarch64-apple-darwin
               #   os: macos-latest
     steps:
@@ -53,10 +53,16 @@ jobs:
     - run: rustup target add ${{ matrix.target }}
     - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose --target=${{ matrix.target }}
-      env: ${{ matrix.env }}
+      env:
+        CC_aarch64_unknown_linux_musl: clang
+        AR_aarch64_unknown_linux_musl: llvm-ar
+        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
-      env: ${{ matrix.env }}
+      env:
+        CC_aarch64_unknown_linux_musl: clang
+        AR_aarch64_unknown_linux_musl: llvm-ar
+        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
     - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
