--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,18 +51,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
+    - run: |
+      export AR_aarch64_unknown_linux_musl=llvm-ar
+      export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS=-Clink-self-contained=yes -Clinker=rust-lld
+      export CC_aarch64_unknown_linux_musl=clang
     - if: "!startsWith(github.ref, 'refs/tags/')"
       run: cargo build --verbose --target=${{ matrix.target }}
-      env:
-        CC_aarch64_unknown_linux_musl: clang
-        AR_aarch64_unknown_linux_musl: llvm-ar
-        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
-      env:
-        CC_aarch64_unknown_linux_musl: clang
-        AR_aarch64_unknown_linux_musl: llvm-ar
-        CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
     - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
@@ -82,10 +78,6 @@ jobs:
             os: windows-latest
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
-            env:
-              CC_aarch64_unknown_linux_musl: clang
-              AR_aarch64_unknown_linux_musl: llvm-ar
-              CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
               # - target: aarch64-apple-darwin
               #   os: macos-latest
     steps:
