--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
     - if: "!startsWith(github.ref, 'refs/tags/')"
-      run: AR_aarch64_unknown_linux_musl=llvm-ar CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS='-Clink-self-contained=yes -Clinker=rust-lld' CC_aarch64_unknown_linux_musl=clang cargo build --verbose --target=${{ matrix.target }}
+      run: AR=llvm-ar RUSTFLAGS='-Clink-self-contained=yes -Clinker=rust-lld' CC=clang cargo build --verbose --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
