--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,17 +42,17 @@ jobs:
             os: windows-latest
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-              #            env:
-              #              CC_aarch64_unknown_linux_musl: clang
-              #              AR_aarch64_unknown_linux_musl: llvm-ar
-              #              CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_RUSTFLAGS: "-Clink-self-contained=yes -Clinker=rust-lld"
+            env:
+              AR: llvm-ar
+              CC: clang cargo build --verbose --target=${{ matrix.target }}
+              RUSTFLAGS: '-Clink-self-contained=yes -Clinker=rust-lld'
               # - target: aarch64-apple-darwin
               #   os: macos-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
     - if: "!startsWith(github.ref, 'refs/tags/')"
-      run: AR=llvm-ar RUSTFLAGS='-Clink-self-contained=yes -Clinker=rust-lld' CC=clang cargo build --verbose --target=${{ matrix.target }}
+      run: cargo build --verbose --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
     - if: startsWith(github.ref, 'refs/tags/')
