--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,30 @@ env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-D warnings"
 
+matrix:
+  config:
+    include:
+      - target: x86_64-unknown-linux-musl
+        os: ubuntu-latest
+        env:
+          CC: gcc
+      - target: x86_64-apple-darwin
+        os: macos-latest
+        env:
+          CC: clang
+      - target: x86_64-pc-windows-gnu
+        os: windows-latest
+        env:
+          CC: gcc
+      - target: aarch64-unknown-linux-musl
+        os: ubuntu-latest
+        env:
+          AR: llvm-ar
+          CC: clang
+          RUSTFLAGS: '-Clink-self-contained=yes -Clinker=rust-lld'
+          # - target: aarch64-apple-darwin
+          #   os: macos-latest
+
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -32,28 +56,7 @@ jobs:
     #needs: [format, lint]
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-            env:
-              CC: gcc
-          - target: x86_64-apple-darwin
-            os: macos-latest
-            env:
-              CC: clang
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-            env:
-              CC: gcc
-          - target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
-            env:
-              AR: llvm-ar
-              CC: clang
-              RUSTFLAGS: '-Clink-self-contained=yes -Clinker=rust-lld'
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
+      matrix: ${{ matrix.config }}
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -62,6 +65,7 @@ jobs:
       env: ${{ matrix.env }}
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
+      env: ${{ matrix.env }}
     - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
@@ -71,18 +75,7 @@ jobs:
     needs: [format, lint, build]
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
+      matrix: ${{ matrix.config }}
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -93,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64-pc-windows-gnu, x86_64-apple-darwin, aarch64-apple-darwin, x86_64-unknown-linux-musl, aarch64-unknown-linux-gnu]
+        target: ${{ unique(matrix.target) }}
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v3
