--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,31 +14,6 @@ permissions: write-all
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "-D warnings"
-
-matrix:
-  config:
-    include:
-      - target: x86_64-unknown-linux-musl
-        os: ubuntu-latest
-        env:
-          CC: gcc
-      - target: x86_64-apple-darwin
-        os: macos-latest
-        env:
-          CC: clang
-      - target: x86_64-pc-windows-gnu
-        os: windows-latest
-        env:
-          CC: gcc
-      - target: aarch64-unknown-linux-musl
-        os: ubuntu-latest
-        env:
-          AR: llvm-ar
-          CC: clang
-          RUSTFLAGS: '-Clink-self-contained=yes -Clinker=rust-lld'
-          # - target: aarch64-apple-darwin
-          #   os: macos-latest
 
 jobs:
   format:
@@ -56,7 +31,31 @@ jobs:
     #needs: [format, lint]
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix: ${{ matrix.config }}
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
+            env:
+              CC: gcc
+              RUSTFLAGS: '-D warnings'
+          - target: x86_64-apple-darwin
+            os: macos-latest
+            env:
+              CC: clang
+              RUSTFLAGS: '-D warnings'
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+            env:
+              CC: gcc
+              RUSTFLAGS: '-D warnings'
+          - target: aarch64-unknown-linux-musl
+            os: ubuntu-latest
+            env:
+              AR: llvm-ar
+              CC: clang
+              RUSTFLAGS: '-D warnings -Clink-self-contained=yes -Clinker=rust-lld'
+              # - target: aarch64-apple-darwin
+              #   os: macos-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -75,7 +74,31 @@ jobs:
     needs: [format, lint, build]
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix: ${{ matrix.config }}
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
+            env:
+              CC: gcc
+              RUSTFLAGS: '-D warnings'
+          - target: x86_64-apple-darwin
+            os: macos-latest
+            env:
+              CC: clang
+              RUSTFLAGS: '-D warnings'
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+            env:
+              CC: gcc
+              RUSTFLAGS: '-D warnings'
+          - target: aarch64-unknown-linux-musl
+            os: ubuntu-latest
+            env:
+              AR: llvm-ar
+              CC: clang
+              RUSTFLAGS: '-D warnings -Clink-self-contained=yes -Clinker=rust-lld'
+              # - target: aarch64-apple-darwin
+              #   os: macos-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -86,7 +109,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: ${{ unique(matrix.target) }}
+        target: [x86_64-unknown-linux-musl, x86_64-apple-darwin, x86_64-pc-windows-gnu, aarch64-unknown-linux-musl]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v3
