--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo clippy --all-targets --all-features -- -D clippy::pedantic
   build:
-    #needs: [format, lint]
+    needs: [format, lint]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -54,8 +54,11 @@ jobs:
               AR: llvm-ar
               CC: clang
               RUSTFLAGS: '-D warnings -Clink-self-contained=yes -Clinker=rust-lld'
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+            env:
+              CC: clang
+              RUSTFLAGS: '-D warnings'
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
@@ -91,14 +94,6 @@ jobs:
             env:
               CC: gcc
               RUSTFLAGS: '-D warnings'
-          - target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
-            env:
-              AR: llvm-ar
-              CC: clang
-              RUSTFLAGS: '-D warnings -Clink-self-contained=yes -Clinker=rust-lld'
-              # - target: aarch64-apple-darwin
-              #   os: macos-latest
     steps:
     - uses: actions/checkout@v3
     - run: rustup target add ${{ matrix.target }}
