--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -104,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-musl, x86_64-apple-darwin, x86_64-pc-windows-gnu, aarch64-unknown-linux-musl]
+        target: [x86_64-unknown-linux-musl, x86_64-apple-darwin, x86_64-pc-windows-gnu, aarch64-unknown-linux-musl, aarch64-apple-darwin]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v3
