--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -113,7 +113,7 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: tfexe_${{ matrix.target }}
-        path: tfexe_${{ matrix.target }}
+    - run: mv tfexe tfexe_${{ matrix.target }}
     - run: gh release view ${GITHUB_REF#refs/*/}
       continue-on-error: true
       id: release-note
