--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -101,8 +101,17 @@ jobs:
     - run: rustup target add ${{ matrix.target }}
     - run: cargo test --verbose --all --target=${{ matrix.target }}
       env: ${{ matrix.env }}
+  note:
+    needs: [format, lint, build, test]
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - uses: actions/checkout@v3
+    - run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
   release:
-    needs: [format, lint, test, build]
+    needs: [format, lint, build, test, note]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     env:
@@ -116,10 +125,5 @@ jobs:
       with:
         name: tfexe_${{ matrix.target }}
     - run: mv tfexe tfexe_${{ matrix.target }}
-    - run: gh release view ${GITHUB_REF#refs/*/}
-      continue-on-error: true
-      id: release-note
-    - if: steps.release-note.outcome != 'success'
-      run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
     - run: gh release upload ${GITHUB_REF#refs/*/} tfexe_${{ matrix.target }}
 
