--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,7 +70,7 @@ jobs:
     - if: startsWith(github.ref, 'refs/tags/')
       run: cargo build --release --target=${{ matrix.target }}
       env: ${{ matrix.env }}
-    - if: startsWith(github.ref, 'refs/tags/') && ${{ matrix.target }} != 'x86_64-pc-windows-gnu'
+    - if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-artifact@v3
       with:
         name: tfexe_${{ matrix.target }}
