--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -101,8 +101,15 @@ jobs:
     - run: rustup target add ${{ matrix.target }}
     - run: cargo test --verbose --all --target=${{ matrix.target }}
       env: ${{ matrix.env }}
-  note:
+  audit:
     needs: [format, lint, build, test]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo install cargo-audit
+    - run: cargo audit
+  note:
+    needs: [format, lint, build, test, audit]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     env:
