--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -118,7 +118,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: gh release create ${GITHUB_REF#refs/*/} --generate-notes
   release:
-    needs: [format, lint, build, test, note]
+    needs: [format, lint, build, test, audit, note]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     env:
