--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,25 +16,11 @@ on:
 
 permissions: {}
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   tfexe:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        #os: [ubuntu-latest, macos-latest]
-        project: [project1, project2, project4]
-        tfexe: [terraform, tofu, tfswitch]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: hashicorp/setup-terraform@v2.0.3
+    - uses: opentofu/setup-opentofu@v1
+    - uses: opentofu/setup-opentofu@v1.0
     - uses: opentofu/setup-opentofu@v1.0.0
-    - if: ${{ matrix.tfexe == 'tfswitch' }}
-      run: curl -L https://raw.githubusercontent.com/warrensbox/terraform-switcher/release/install.sh | sudo bash
-    - run: cargo run -- init
-      working-directory: ./test_dir/${{ matrix.project }}/
-      env:
-        TFEXE: ${{ matrix.tfexe }}
